# Bargain-Hunting

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  coop.txt  curlStore.c  functions.c  functions.h  main.c  rema.txt  scraper.c  scraper.h  stores.txt  test.txt
.github/workflows/: c-cpp.yml
